# bugkit

./: .gitignore  LICENSE  README.md  example_layer_comparison.py  example_llama_analysis.py  examples.py  pyproject.toml  test_integration.py
layer_comparison_results/: summary.txt
ml_debug_toolkit/: __init__.py
ml_debug_toolkit/analysis/: __init__.py  loss_analyzer.py  loss_logger.py
ml_debug_toolkit/capture/: __init__.py  non_streaming.py  streaming.py
ml_debug_toolkit/core/: __init__.py  base.py  debug_inserter.py  logger.py
ml_debug_toolkit/frameworks/: __init__.py  storage.py
ml_debug_toolkit/frameworks/huggingface/: __init__.py  accelerate_utils.py  analysis.py  benchmarking.py  debugger.py  peft_utils.py  trl_utils.py
ml_debug_toolkit/frameworks/pytorch/: __init__.py  bitsandbytes_utils.py  cuda.py  debugger.py  distributed.py  hooks.py  profiling.py  triton_utils.py
ml_debug_toolkit/testing/: __init__.py  differ.py  runner.py  tensor_compare.py
ml_debug_toolkit/tracing/: __init__.py  chrome_tracer.py  trace_comparer.py  trace_parser.py
